@@ -96,6 +96,7 @@ enum RETURN_STATUS {
   STATUS_XMLENCODING_MISSING = 12,
   STATUS_UNIT_MISSING = 13,
   STATUS_UNIT_INVALID = 14,
+  STATUS_INVALID_OPTION_COMBINATION = 15,
 };
 
 
