@@ -1,6 +1,9 @@
 CHANGES
 
 Trunk
+
+	Check for invalid combination of xml output and source encoding on srcml2src.
+
 	Output encoding with new option "--info" in srcml2src.
 
 	With multiple input file and in verbose mode output name of file (as in file list mode).
